manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: publicweb
spec:
  template:
    metadata:
      labels:
        app: smarthotels
        component: publicweb
    spec:
      containers:
      - name: publicweb
        image: gabrtvbuild.azurecr.io/smarthotels/publicweb:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
